--- a/purchase.html
+++ b/purchase.html
@@ -159,7 +159,7 @@
                   There are some LEAP Hands on Amazon from a variety of different sellers.  Please note that you will pay additional Amazon fees compared to directly ordering from these vendors.  Check them out here:                
               </div>
               <br>
-              <button type="submit" href="https://a.co/d/ggOW0vR" class="btn btn-primary">Amazon</button>
+              <a href="https://a.co/d/ggOW0vR" class="btn btn-primary" target="_blank">Link to Amazon</a>
             </div>
           </div>
           <div class="columns is-centered has-text-centered">
